Add info container HTML

--- a/index.html
+++ b/index.html
@@ -34,5 +34,34 @@
             <div><p>An image will go here.</p></div>
         </div>
       </div>  
+
+      <div class="info-container">
+        <div class="info-header">
+            <h3>Some random information.</h3>
+        </div>
+
+            <!--I'll need to nest the buttons and the information separately to line it up-->
+
+            <!--Change the div image class to img-->
+
+        <div class="info-buttons">
+            <div class="info-one">
+                <div class="image-one">Image goes here</div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-two">
+                <div class="image-two">Image goes here</div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-three">
+                <div class="image-three">Image goes here</div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info-four">
+                <div class="image-four">Image goes here</div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>    
+        </div>
+      </div>
     </body>
 </html>
