Add quote section

--- a/index.html
+++ b/index.html
@@ -63,5 +63,10 @@
             </div>    
         </div>
       </div>
+            <!--May have to merge the quote and author into one div. Not sure yet...-->
+      <div class="quote-container">
+        <div class="quote-one">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read this. Who knows? All I know is that it will someday look nice. Also, I mailed you a package, did you get that yet? ;^)</div>
+        <div class="author-one">-Ted Kaczynski</div>
+      </div>  
     </body>
 </html>
