Add call to action and footer

--- a/index.html
+++ b/index.html
@@ -63,10 +63,28 @@
             </div>    
         </div>
       </div>
+            
             <!--May have to merge the quote and author into one div. Not sure yet...-->
+
+
       <div class="quote-container">
-        <div class="quote-one">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read this. Who knows? All I know is that it will someday look nice. Also, I mailed you a package, did you get that yet? ;^)</div>
-        <div class="author-one">-Ted Kaczynski</div>
+        <div class="quote-one">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read this. Who knows? All I know is that it will someday look nice.</div>
+        <div class="author-one">-A Smart Fella</div>
       </div>  
+
+            <!--May need to rearrange the text and buttons-->
+      <div class="action-container">
+        <div class="signup">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="action-signup-button"><a href="https://www.google.com">Sign up</a></button>
+      </div>
+
+            <!--Need to figure out how to use the copyright symbol-->
+
+      <div class="footer-container">
+        <div>Copyright C The Odin Project 2021</div>
+      </div>
     </body>
-</html>
+</html> 
