Nest header elements to fit CSS

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     <body>
       <div class="header-container">
         <div class="header-logo">
-            <h1>This is the title of the page</h1>
+            <h1>Header Logo</h1>
         </div>
 
         <div class="header-links">
+          <ul>  
             <li><a href="https://www.google.com">Header Link One</a></li>
             <li><a href="https://www.google.com">Header Link Two</a></li>
             <li><a href="https://www.google.com">Header Link Three</a></li>
+          </ul>  
         </div>
-
+      </div>  
         <!-- May have to nest some things in the hero container-->
-
-        <div class="header-hero-container">
+      <div class="hero">  
+        <div class="hero-container">
             <h2>This website is not yet awesome</h2>
             <p>Here is some subtext that goes between the Hero header and the sign up button. 
                 I am trying to make this long so I can take up lots of room to wrap to a new line........ 
@@ -30,7 +32,7 @@
 
             <!-- change the div to img and put a pretty picture there -->
 
-        <div class="header-image">
+        <div class="hero-image">
             <div><p>An image will go here.</p></div>
         </div>
       </div>  
