Fix info div class names

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <!-- May have to nest some things in the hero container-->
       <div class="hero">  
         <div class="hero-container">
-            <h2>This website is not yet awesome</h2>
+            <div class="hero-main">This website is not yet awesome</div>
             <p>Here is some subtext that goes between the Hero header and the sign up button. 
                 I am trying to make this long so I can take up lots of room to wrap to a new line........ 
-                Maybe this is enough but we will see.</p>
-            <button class="header-signup-button"><a href="https://www.google.com">Sign Up Here</a></button>    
+                Maybe this is enough but we will see.</p>        
+            <button class="hero-signup-button"><a href="https://www.google.com">Sign Up Here</a></button>    
         </div>
 
             <!-- change the div to img and put a pretty picture there -->
@@ -47,20 +47,20 @@
             <!--Change the div image class to img-->
 
         <div class="info-buttons">
-            <div class="info-one">
-                <div class="image-one">Image goes here</div>
+            <div class="info">
+                <div class="image">Image goes here</div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
-            <div class="info-two">
-                <div class="image-two">Image goes here</div>
+            <div class="info">
+                <div class="image">Image goes here</div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
-            <div class="info-three">
-                <div class="image-three">Image goes here</div>
+            <div class="info">
+                <div class="image">Image goes here</div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
-            <div class="info-four">
-                <div class="image-four">Image goes here</div>
+            <div class="info">
+                <div class="image">Image goes here</div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>    
         </div>
