Adjust nesting in the signup container for easier flex

--- a/index.html
+++ b/index.html
@@ -77,10 +77,14 @@
             <!--May need to rearrange the text and buttons-->
       <div class="action-container">
         <div class="signup">
+            <div class="signup-text">
             <h4>Call to action! It's time!</h4>
             <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <button class="action-signup-button"><a href="https://www.google.com">Sign up</a></button>
+            </div>
+            <div class="signup-button">
+            <button class="action-signup-button"><a href="https://www.google.com">Sign up</a></button>
+            </div>
+        </div>    
       </div>
 
             <!--Need to figure out how to use the copyright symbol-->
