Add personal detail and an image

--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Landing Page</title>
+        <title>Jholson1030 Landing Page</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
       <div class="header-container">
         <div class="header-logo">
-            <h1>Header Logo</h1>
+            <h1>John's Landing Page</h1>
         </div>
 
         <div class="header-links">
           <ul>  
-            <li><a href="https://www.google.com">Header Link One</a></li>
-            <li><a href="https://www.google.com">Header Link Two</a></li>
-            <li><a href="https://www.google.com">Header Link Three</a></li>
+            <li><a href="https://www.google.com">About</a></li>
+            <li><a href="https://www.google.com">Gallery</a></li>
+            <li><a href="https://www.google.com">Donate</a></li>
           </ul>  
         </div>
       </div>  
         <!-- May have to nest some things in the hero container-->
       <div class="hero">  
         <div class="hero-container">
-            <div class="hero-main">This website is not yet awesome</div>
-            <p>Here is some subtext that goes between the Hero header and the sign up button. 
-                I am trying to make this long so I can take up lots of room to wrap to a new line........ 
-                Maybe this is enough but we will see.</p>        
+            <div class="hero-main">My Coding Journey</div>
+            <p>This website is my second TOP Project. I am demonstrating what I have learned with CSS and flexbox. I plan on adding more to it later and use this landing page in my portfolio.</p>        
             <button class="hero-signup-button"><a href="https://www.google.com">Sign Up Here</a></button>    
         </div>
 
             <!-- change the div to img and put a pretty picture there -->
 
         <div class="hero-image">
-            <div><p>An image will go here.</p></div>
+            <img src="pirate.jpg"
+            height="250px"
+            width="500px" alt="This is an actual image of an internet pirate.">
         </div>
       </div>  
 
@@ -90,7 +90,7 @@
             <!--Need to figure out how to use the copyright symbol-->
 
       <div class="footer-container">
-        <div>Copyright C The Odin Project 2021</div>
+        <div>Copyright &#169 The Odin Project 2021</div>
       </div>
     </body>
 </html> 
