Change copyright info

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <div class="info-container">
         <div class="info-header">
-            <h3>Some random information.</h3>
+            <h3>Future projects will go here.</h3>
         </div>
 
             <!--I'll need to nest the buttons and the information separately to line it up-->
@@ -90,7 +90,7 @@
             <!--Need to figure out how to use the copyright symbol-->
 
       <div class="footer-container">
-        <div>Copyright &#169 The Odin Project 2021</div>
+        <div>Copyright &#169 John-Henry Zebulon Olson 2022</div>
       </div>
     </body>
 </html> 
